--- a/apps/docs/src/content/docs/concepts/hooks.mdx
+++ b/apps/docs/src/content/docs/concepts/hooks.mdx
@@ -2,7 +2,9 @@
 title: Hooks
 ---
 
-**Advanced: Hooks are not required for basic usage of Kilpi.**
+:::note
+This is an advanced concept and not required for most use-cases.
+:::
 
 Hooks are a flexible API that allows hooking into the functionality of the core library. They are used to customize and extend the behavior of Kilpi.
 
