--- a/apps/docs/src/content/docs/getting-started/support.mdx
+++ b/apps/docs/src/content/docs/getting-started/support.mdx
@@ -4,7 +4,7 @@ title: Support development
 
 Kilpi is free to use and will always remain so.
 
-## Suppporting development
+## Supporting development
 
 However, Kilpi is currently being developed by a single person as a side-project. This is not sustainable. You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee.
 
