--- a/apps/docs/src/content/docs/advanced/rbac.mdx
+++ b/apps/docs/src/content/docs/advanced/rbac.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 :::note
-With Kilpi, you don't have to decide between [RBAC](/advanced/rbac), [ABAC](/advanced/abac), [ReBAC](/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, RBAC](/advanced/rbac), [ABAC](/advanced/abac) and [ReBAC](/advanced/rebac) are not completely separate models (e.g. [RBAC](/advanced/rbac) is a subset of [ABAC](/advanced/abac)).
+With Kilpi, you don't have to decide between [RBAC](/advanced/rbac), [ABAC](/advanced/abac), [ReBAC](/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, [RBAC](/advanced/rbac), [ABAC](/advanced/abac) and [ReBAC](/advanced/rebac) are not completely separate models (e.g. [RBAC](/advanced/rbac) is a subset of [ABAC](/advanced/abac)).
 
 This guide is a tutorial on how to implement authorization policies that would fall under the term of RBAC.
 :::
@@ -17,11 +17,11 @@ Before implementing RBAC, carefully consider whether [ABAC](/advanced/abac) or a
 Furthermore, [implementing permissions](/advanced/permissions) instead of roles may allow for a more flexible authorization system, if needed. Roles can be seen as a user-facing abstraction of permissions, instead of an attribute of the user.
 :::
 
-Implementing a role-based access control with Kilpi is simple with the `Policy.rbac` utility, which is an alternative policy constructor to the default `Policy.as` constructor.
+Implementing a role-based access control with Kilpi is simple with the `createRbacPolicy` utility, which is an alternative policy constructor API.
 
 ```ts
-export const RbacPolicy = Policy.rbac(
-  (subject: Subject | null) => {
+export const RbacPolicy = createRbacPolicy(
+  (subject: Subject | null) => { // May optionally be async, and e.g. fetch data
     if (!subject) return null; // Subject narrowing
     return { 
       subject, 
@@ -53,8 +53,8 @@ export const policies = {
     read: RbacPolicy("user", "admin", "guest"),
     create: RbacPolicy("user", "admin"),
 -    delete: RbacPolicy("admin"),
-+    delete: AuthedPolicy((user, document: Document) => {
-+      return hasRole(user, "admin") || user.id === document.ownerId;
++    async delete((user, document: Document) {
++      return user && (hasRole(user, "admin") || user.id === document.ownerId) ? grant(user) : deny()
 +    })
   },
 }
