--- a/apps/docs/src/content/docs/installation/koa.mdx
+++ b/apps/docs/src/content/docs/installation/koa.mdx
@@ -11,8 +11,8 @@ Installing Kilpi for Koa is as easy as providing Kilpi scope within a middleware
 ```ts
 app.use(async (ctx, next) => {
   Kilpi.runInScope(async () => {
-    Kilpi.onUnauthorized(() => {
-      ctx.throw(403);
+    Kilpi.onUnauthorized(({ message }) => {
+      ctx.throw(403, message);
     })
     
     await next();
