--- a/apps/docs/src/content/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/content/docs/getting-started/introduction.mdx
@@ -5,7 +5,7 @@ sidebar:
 ---
 
 
-> **Kilpi** _[/ˈkilpi/]_ is the **finnish** word for **shield**.
+> **Kilpi** _[/ˈkilpi/]_ is the **Finnish** word for **shield**.
 
 
 ## What is Kilpi
