docs: document client-side usage

--- a/apps/docs/src/content/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/content/docs/getting-started/introduction.mdx
@@ -64,14 +64,7 @@ Kilpi may not suit you, if you...
 - Require a ready-made no-code interface or a domain-specific language for policies.
 
 :::note
-If you are building a **client-only** or **full-stack application** with TypeScript, Kilpi does not **yet** provide client-side authorization, only server-side authorization.
-
-This means that you can not yet use Kilpi to e.g. disable or hide a button on the frontend in a client-side component.
-
-However, the APIs for client-side authorization are currently being planned and will be released in the future.
-
-- **Client-side API** for client-side applications that have a backend with Kilpi. It will call a Kilpi endpoint to request the server for authorization checks.
-- **Client-only API** for client-side applications that do not have a backend with Kilpi. It will allow to run Kilpi on the frontend.
+If you are building a **client-only** application with TypeScript, Kilpi does not yet provide client-only authorization.
 :::
 
 ---
