--- a/apps/docs/src/content/docs/getting-started/quickstart.mdx
+++ b/apps/docs/src/content/docs/getting-started/quickstart.mdx
@@ -130,7 +130,7 @@ Get started quickly with Kilpi using this guide.
 
     ```ts
     // myFunction.ts
-    export async function myFunction() {
+    export lufunction myFunction() {
       await Kilpi.authorize("documents:create");
       // Your logic here
     }
@@ -139,5 +139,6 @@ Get started quickly with Kilpi using this guide.
 
 ## Next steps
 
+- Start using Kilpi [on the client](/getting-started/usage-on-client).
 - Follow the installation guide for your framework of choice.
 -	Read up on [Kilpi concepts and guides](/concepts/authorization).
