--- a/apps/docs/src/content/docs/concepts/subject.mdx
+++ b/apps/docs/src/content/docs/concepts/subject.mdx
@@ -4,17 +4,6 @@ title: Subject
 
 **The subject** represents your **user** or other actor and their permissions, memberships or similar. The subject allows you to wrap any authentication provider and pass it to Kilpi for evaluating policies. The term "user" can be used interchangeably with the "subject".
 
-:::note
-The subject is automatically cached inside the scope, when available. To disable this behavior, you can pass `settings.disableSubjectCaching: true` to `createKilpi`. (We heavily recommend caching the subject for performance reasons, either yourself or by using the default caching behavior).
-
-```ts
-// kilpi.ts
-export const Kilpi = createKilpi({ ..., 
-  settings: { disableSubjectCaching: true, },
-})
-```
-:::
-
 ### Example subject
 
 ```ts
@@ -49,6 +38,19 @@ const getSubject = cache(() => {
 ```
 
 If you have data that is only used in a few policies, it should either be **fetched in the policy function** (preferred) or be passed down as the resource.
+
+### Subject caching
+
+The subject is automatically cached inside the scope, if one is available. To disable this behavior, you can pass `settings.disableSubjectCaching: true` to `createKilpi`.
+
+We recommend caching the subject for performance reasons, either yourself or by allowing Kilpi to cache it for you.
+
+```ts
+// kilpi.ts
+export const Kilpi = createKilpi({ ..., 
+  settings: { disableSubjectCaching: true, },
+})
+```
 
 ---
 
