feat: create example project

--- a/apps/docs/src/content/docs/getting-started/quickstart.mdx
+++ b/apps/docs/src/content/docs/getting-started/quickstart.mdx
@@ -130,7 +130,7 @@ Get started quickly with Kilpi using this guide.
 
     ```ts
     // myFunction.ts
-    export lufunction myFunction() {
+    export function myFunction() {
       await Kilpi.authorize("documents:create");
       // Your logic here
     }
