docs: og tags and image plus new support page

--- a/apps/docs/src/content/docs/getting-started/support.mdx
+++ b/apps/docs/src/content/docs/getting-started/support.mdx
@@ -2,20 +2,30 @@
 title: Support development
 ---
 
-Kilpi is free to use and will always remain so.
+Kilpi is free to use and will always remain so and I am committed to maintaining Kilpi, as I am using it in multiple production projects. However, developing and maintaining a large scale open-source library "as a hobby" may not be sustainable in the long run.
 
 ## Supporting development
 
-However, Kilpi is currently being developed by a single person as a side-project. This is not sustainable. You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee.
+You can help keep the coffee flowing to receive active maintenance and new features by supporting me for the small price of a coffee. Even small contributions are greatly appreciated and help keep Kilpi alive and evolving.
 
 <a href="https://www.buymeacoffee.com/nevavuoriji" target="_blank" style="margin-block:32px;display:inline-block;"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></img></a>
 
-This is the fastest way to get new features: Improved plugins API, client-side authorization, audit plugin, improved documentation and so much more.
-
 ## Contributing
 
-Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi).
+Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi). Even opening issues and feature requests is a great way to contribute.
 
 :::note
 Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
 :::
+
+Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks**, such as:
+- Tanstack Start
+- Vue and Nuxt
+- Svelte and SvelteKit
+- Solid and SolidStart 
+- Angular, Angular SSR and Analog
+- Astro
+- Fastify
+- Fresh
+- Elysia
+- Ultra
